# game-of-life

./: CMakeLists.txt  README.md  game.config  makefile
src/: GameOfLife.cpp  GameOfLife.h  Game_of_Life.1  main.cpp
